--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,11 @@ header img {
   margin-left: 3rem;
 }
 
+#contact-form .mb-3 {
+  width: 50%;
+  margin: auto;
+}
+
 footer {
   background-color: grey;
   padding: 2rem 0;
