--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: rgb(67, 57, 182);
+}
+
 header {
   background-color: grey;
   padding: 2rem 0;
@@ -14,7 +18,7 @@ nav a {
   background-color: lightgray;
   padding: 1rem;
   border-radius: 0 2rem 2rem 2rem;
-  min-height: 500px;
+  min-height: 550px;
 }
 
 #home a {
@@ -109,7 +113,7 @@ footer ol {
   }
 
   #service img {
-    width: auto;
+    width: 5rem;
   }
 
   #projects {
