--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ nav a {
 }
 
 .container {
-  background-color: lightgray;
+  background-color: rgba(211, 211, 211, 0.6);
   padding: 1rem;
   border-radius: 0 2rem 2rem 2rem;
   min-height: 550px;
