--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,22 @@
+.main * {
+  color: white;
+}
+
 body {
-  background-color: rgb(67, 57, 182);
+  background-image: url(../images/background2.jpg);
+  background-size: cover;
 }
 
 header {
   background-color: grey;
-  padding: 2rem 0;
+  padding: 0.5rem 0;
 }
 
 header img {
   height: 3rem;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 100%;
+  padding: 0.25rem;
 }
 
 nav img {
@@ -20,7 +28,7 @@ nav a {
 }
 
 .container {
-  background-color: rgba(211, 211, 211, 0.6);
+  background-color: rgba(154, 154, 154, 0.6);
   padding: 1rem;
   border-radius: 0 2rem 2rem 2rem;
   min-height: 550px;
@@ -32,11 +40,17 @@ nav a {
 }
 
 #home img {
-  width: 30%;
+  width: 300px;
+  height: 100%;
 }
 
 #service img {
   width: 20rem;
+}
+
+.card-bg {
+  background-image: url(../images/background3.jpg);
+  background-size: cover;
 }
 
 #projects h2 {
@@ -48,9 +62,19 @@ nav a {
   margin-left: 3rem;
 }
 
-#contact-form .mb-3 {
+#contact-form {
   width: 50%;
   margin: auto;
+}
+
+.form-inputs {
+  width: 80%;
+}
+
+.form-inputs input,
+.form-inputs textarea {
+  border: 4px solid rgb(36, 202, 194);
+  background: none;
 }
 
 #exampleFormControlTextarea1 {
@@ -93,13 +117,21 @@ footer ol {
   list-style: none;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 980px) {
   #contact {
     flex-direction: column;
   }
 
+  nav {
+    background-color: rgba(128, 128, 128, 0.6);
+    position: fixed;
+    right: 0;
+    height: 100vh;
+  }
+
   nav img {
     display: flex;
+    position: relative;
   }
   nav a {
     display: none;
