--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ footer ol {
   nav {
     position: fixed;
     right: 0;
-    z-index: 1;
+    z-index: 5;
   }
 
   nav img {
@@ -188,7 +188,8 @@ footer ol {
   .social-links ol {
     display: flex;
   }
-}
 
-@media screen and (max-width: 300px) {
+  footer form button {
+    margin-bottom: 2rem;
+  }
 }
